crates/oxc_react_compiler/tests/snapshots/unused-conditional.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/unused-conditional.js
---
function Component(props) {
	let x;
	(x = 1, 1) && (x = 2);
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
