crates/oxc_react_compiler/tests/snapshots/unused-logical.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/unused-logical.js
---
function Component(props) {
	let x;
	props.cond ? x = 1 : x = 2;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
