crates/oxc_react_compiler/tests/snapshots/unused-object-element.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/unused-object-element.js
---
function Foo(props) {
	const { x } = props.a;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
