crates/oxc_react_compiler/tests/snapshots/unused-optional-method-assigned-to-variable.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/unused-optional-method-assigned-to-variable.js
---
function Component(props) {
	const obj = makeObject();
	obj.a?.b?.(props.c);
	return null;
}
