crates/oxc_react_compiler/tests/snapshots/unused-ternary-assigned-to-variable.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/unused-ternary-assigned-to-variable.js
---
function Component(props) {
	const obj = makeObject();
	obj.a ? props.b : props.c;
	return null;
}
