crates/oxc_react_compiler/tests/snapshots/update-expression-context-identifier-in-map.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/update-expression-context-identifier-in-map.js
---
import { c as _c } from "react/compiler-runtime";
// @flow
function useChannelRowIndexes(input) {
	const $ = _c(6);
	let channelRowCount;
	let t0;
	if ($[0] !== input) {
		const sections = [...input];
		channelRowCount = 0;
		t0 = sections.map((section) => {
			if (!section.isChannel) {
				return -1;
			}
			return channelRowCount++;
		});
		$[0] = input;
		$[1] = channelRowCount;
		$[2] = t0;
	} else {
		channelRowCount = $[1];
		t0 = $[2];
	}
	const indexes = t0;
	let t1;
	if ($[3] !== channelRowCount || $[4] !== indexes) {
		t1 = {
			channelRowCount,
			indexes
		};
		$[3] = channelRowCount;
		$[4] = indexes;
		$[5] = t1;
	} else {
		t1 = $[5];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useChannelRowIndexes,
	params: [[
		{ isChannel: false },
		{ isChannel: true },
		{ isChannel: true },
		{ isChannel: false }
	]],
	isComponent: false
};
