crates/oxc_react_compiler/tests/snapshots/update-expression-context-identifiers.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/update-expression-context-identifiers.js
---
import { c as _c } from "react/compiler-runtime";
function useFoo() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		let counter = "2";
		t0 = [null].map(() => {
			const postfixIncrement = counter++;
			const prefixIncrement = ++counter;
			const postfixDecrement = counter--;
			const prefixDecrement = --counter;
			return {
				counter,
				postfixIncrement,
				prefixIncrement,
				postfixDecrement,
				prefixDecrement
			};
		});
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0[0];
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: []
};
