crates/oxc_react_compiler/tests/snapshots/update-expression-context-variable-via-type-annotation.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/update-expression-context-variable-via-type-annotation.js
---
import { c as _c } from "react/compiler-runtime";
// @flow @compilationMode(infer)
function Component(props) {
	const $ = _c(1);
	for (const [key, value] of props.data) {}
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
